@@ -4090,8 +4090,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_BYTE:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_BYTE: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_BYTE, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
@@ -4102,8 +4102,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_SHORT:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_SHORT: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_SHORT, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
@@ -4114,8 +4114,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_LONG:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_LONG: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_LONG, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
@@ -4126,8 +4126,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_FLOAT:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_FLOAT: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_FLOAT, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
@@ -4138,8 +4138,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_DOUBLE:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_DOUBLE: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_DOUBLE, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
@@ -4150,8 +4150,8 @@ void SPVM_CSOURCE_BUILDER_PRECOMPILE_build_sub_implementation(SPVM_ENV* env, SPV
           }
           case SPVM_OPCODE_C_ID_CALL_SUB_VALUE_INT:
           case SPVM_OPCODE_C_ID_CALL_METHOD_VALUE_INT: {
-            int32_t decl_sub_return_type_fields_length = opcode->operand3 + 1;
-            for (int32_t field_index = 0; field_index < decl_sub_return_type_fields_length; field_index++) {
+            int32_t decl_sub_return_type_width = opcode->operand3;
+            for (int32_t field_index = 0; field_index < decl_sub_return_type_width; field_index++) {
               SPVM_STRING_BUFFER_add(string_buffer, "      ");
               SPVM_CSOURCE_BUILDER_PRECOMPILE_add_operand(env, string_buffer, SPVM_CSOURCE_BUILDER_PRECOMPILE_C_CTYPE_ID_INT, var_id + field_index);
               SPVM_STRING_BUFFER_add(string_buffer, " = ");
